# vibeagent

./: .coverage  .env.example  .flake8  .gitignore  .renderignore  .vibeagent_config.json  CODE_REVIEW.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  FINAL_VERIFICATION.md  IMPLEMENTATION_REOWN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS.md  MERGE_COMPLETION_SUMMARY.md  MERGE_REPORT.md  MOBILE_WALLET_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  SECURITY_SETUP.md  pyproject.toml  render.yaml  requirements.txt  setup.bat  setup.sh  start.sh  test_autonomous.py  test_mev_bot.py  test_performance.py  test_vibeagent.py  test_walletconnect.py  transactions.jsonl
.github/: copilot-instructions.md
contracts/: FlashloanArbitrage.sol  FlashloanLiquidation.sol
docs/: ANDROID_INSTALL.md  AUTONOMOUS_AGENT.md  DEPLOYMENT_COMPLETE.md  INSTALLATION.md  MEV_GUIDE.md  PWA_IMPLEMENTATION.md  QUICK_DEPLOY.md  RENDER_DEPLOYMENT.md  REOWN_ANDROID_CORE.md  USER_GUIDE.md  WALLETCONNECT_GUIDE.md  WALLETCONNECT_SETUP.md  WALLET_INTEGRATION.md
examples/: arbitrage_example.py  liquidation_example.py
vibeagent/: __init__.py  agent.py  autonomous_executor.py  autonomous_scanner.py  avocado_integration.py  cli.py  config.py  contract_abis.py  execution_engine.py  logger.py  mev_bot.py  wallet_connector.py  web_interface.py
vibeagent/static/: generate_icons.py  manifest.json  package.json  reown-wallet.js  service-worker.js  wallet.js
vibeagent/templates/: index.html
