[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeagent"
version = "1.0.0"
description = "AI-Powered DeFi Strategy Generator for Instadapp Avocado Multi-Sig Wallet"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VibeAgent Team", email = "info@vibeagent.io"}
]
keywords = ["defi", "ethereum", "flashloan", "arbitrage", "liquidation", "avocado", "instadapp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "eth-utils>=2.3.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "colorama>=0.4.6",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vibeagent = "vibeagent.cli:cli"

[project.urls]
Homepage = "https://github.com/Disseveru/vibeagent"
Documentation = "https://github.com/Disseveru/vibeagent/wiki"
Repository = "https://github.com/Disseveru/vibeagent"
"Bug Tracker" = "https://github.com/Disseveru/vibeagent/issues"

[tool.setuptools]
packages = ["vibeagent"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
